BUG: 148162

Qt-3.3.8 changed the parsing in QDateTime::fromString() but introduced
a bug which leads to the problem that days with 1 digit will incorrectly being
parsed as day 0 - which is invalid.
workaround with the implementation from Qt-3.3.6

svn path=/branches/KDE/3.5/kdesdk/cervisia/; revision=711210